Added creation date to CHANGELOG

--- a/module-template/CHANGELOG.md.jinja
+++ b/module-template/CHANGELOG.md.jinja
@@ -7,9 +7,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
-## [0.0.1] - 2022-12-28
+## [0.0.1] - {{ release_date }}
 
 ### Added
 
-- This is the initial release of our GitHub Organization module with support
-  for managing GitHub Organizations, Members and Blocked Users.
+- This is the initial release terraform-{{ module_name }} module
